[tool.poetry]
name = "plot"
version = "0.1.0"
description = ""
authors = ["roman-dector <roman.schaposhnikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
suntime = { git = "git@github.com:roman-dector/suntime.git", branch = "master" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
